--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "cd frontend && npm start",
     "install-all": "npm install && cd backend && npm install && cd ../frontend && npm install",
     "build": "cd frontend && npm run build",
-    "start": "cd backend && npm start"
+    "start": "cd backend && npm start",
+    "netlify-build": "npm run install-all && npm run build"
   },
   "keywords": ["ai", "meeting", "summarizer", "react", "nodejs", "mongodb"],
   "author": "Your Name",
