--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "axios": "^1.6.2",
     "react-router-dom": "^6.20.1",
     "react-hot-toast": "^2.4.1",
@@ -47,6 +47,12 @@
     "tailwindcss": "^3.3.6",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32"
+  },
+  "overrides": {
+    "sourcemap-codec": "@jridgewell/sourcemap-codec@^1.4.15",
+    "rimraf": "^5.0.5",
+    "glob": "^10.3.10",
+    "svgo": "^3.2.0"
   },
   "proxy": "http://localhost:5000"
 }
