--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "jspdf": "^2.5.1",
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "sourcemap-codec": "^1.4.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,7 +53,11 @@
     "sourcemap-codec": "@jridgewell/sourcemap-codec@^1.4.15",
     "rimraf": "^5.0.5",
     "glob": "^10.3.10",
-    "svgo": "^3.2.0"
+    "svgo": "^3.2.0",
+    "workbox-cacheable-response": "^7.0.0",
+    "workbox-google-analytics": "^7.0.0",
+    "domexception": "^3.0.0",
+    "abab": "^3.0.0"
   },
   "proxy": "http://localhost:5000"
 }
