--- a/netlify-simple.toml
+++ b/netlify-simple.toml
@@ -1,10 +1,9 @@
 [build]
   publish = "frontend/build"
-  command = "cd frontend && npm ci --legacy-peer-deps && npm run build"
+  command = "cd frontend && npm install --legacy-peer-deps && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
-  NPM_FLAGS = "--legacy-peer-deps"
 
 [[redirects]]
   from = "/*"
