--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,18 +7,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
     "axios": "^1.6.2",
-    "react-router-dom": "^6.20.1",
-    "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.294.0",
-    "jspdf": "^2.5.1",
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
-    "uuid": "^9.0.1",
-    "sourcemap-codec": "^1.4.8"
+    "jspdf": "^2.5.1",
+    "lucide-react": "^0.294.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.20.1",
+    "react-scripts": "^5.0.1",
+    "sourcemap-codec": "^1.4.8",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,19 +45,12 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.6",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6"
   },
-  "overrides": {
-    "sourcemap-codec": "@jridgewell/sourcemap-codec@^1.4.15",
-    "rimraf": "^5.0.5",
-    "glob": "^10.3.10",
-    "svgo": "^3.2.0",
-    "workbox-cacheable-response": "^7.0.0",
-    "workbox-google-analytics": "^7.0.0",
-    "domexception": "^3.0.0",
-    "abab": "^3.0.0"
+  "resolutions": {
+    "sourcemap-codec": "^1.4.8"
   },
   "proxy": "http://localhost:5000"
 }
