--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "docx": "^8.5.0",
+    "dotenv": "^16.6.1",
     "file-saver": "^2.0.5",
-    "jspdf": "^2.5.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.0.0",
     "sourcemap-codec": "^1.4.8",
     "uuid": "^9.0.1"
   },
