--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 [build]
   publish = "frontend/build"
-  command = "cd frontend && npm install --legacy-peer-deps && npm run build"
+  command = "cd frontend && npm install --legacy-peer-deps && npx react-scripts build"
 
 [build.environment]
+  NODE_ENV = "production"
   NODE_VERSION = "18"
   NPM_FLAGS = "--legacy-peer-deps"
 
