--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.1",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "5.0.1",
     "sourcemap-codec": "^1.4.8",
     "uuid": "^9.0.1"
   },
