--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,10 @@
 [build]
   publish = "frontend/build"
-  command = "cd frontend && npm install --legacy-peer-deps && npx react-scripts build"
+  command = "cd frontend && npm install && npm run build"
 
 [build.environment]
   NODE_ENV = "production"
   NODE_VERSION = "18"
-  NPM_FLAGS = "--legacy-peer-deps"
 
 [[redirects]]
   from = "/*"
